methods.picture.MethodsPictureLarge.scala.error
Compilation error:
MethodsPictureLarge:1: error: Missing closing brace `}' assumed here
override def run(a:Int, b:Int) {
^MethodsPictureLarge:1: error: expected start of definition
override def run(a:Int, b:Int) {
         ^